--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,12 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "forceConsistentCasingInFileNames": false,
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
@@ -21,10 +21,12 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "types": ["node"],
-    "paths": {
-       "@/components*": ["./src/components*"],
-       "@/types*": ["./src/types*"],
-       "@/providers*": ["./src/components/providers*"],
+      "baseUrl": "./",
+      "paths": {
+       "@providers/*": ["src/components/providers/*"],
+       "@components/*": ["src/components/*"],
+       "@types": ["src/types"],
+       "@hooks/*": ["src/hooks/*"],
     }
   },
   "include": ["src/**/*", "*"],
