--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intl": "^6.2.8"
+    "react-intl": "^6.2.8",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.6.0",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -23,6 +23,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.34.0",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
