--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,9 @@
         ".es": "JS",
         ".js": "JSX"
      },
-    "target": "ESNext",
+    "target": "ES6",
     "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": ["es5", "es6", "dom", "dom.iterable"],
     "forceConsistentCasingInFileNames": false,
     "allowJs": false,
     "skipLibCheck": true,
@@ -21,12 +21,9 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "types": ["node"],
-      "baseUrl": "./",
-      "paths": {
-       "@providers/*": ["src/components/providers/*"],
-       "@components/*": ["src/components/*"],
-       "@types": ["src/types"],
-       "@hooks/*": ["src/hooks/*"],
+    "baseUrl": ".",
+    "paths": {
+       "@/*": ["src/*"],
     }
   },
   "include": ["src/**/*", "*"],
