--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,13 +20,18 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["node"],
+    "types": [
+        "jest",
+        "node",
+        "@testing-library/jest-dom",
+        "@testing-library/user-event"
+    ],
     "baseUrl": ".",
     "paths": {
        "@/*": ["src/*"],
     }
   },
-  "include": ["src/**/*", "*"],
+  "include": ["src/**/*", "*", "vite.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }],
   "exclude": ["node_modules"]
 }
