--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,12 +21,9 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "types": ["node"],
-      "baseUrl": "./",
-      "paths": {
-       "@providers/*": ["src/components/providers/*"],
-       "@components/*": ["src/components/*"],
-       "@types": ["src/types"],
-       "@hooks/*": ["src/hooks/*"],
+    "baseUrl": ".",
+    "paths": {
+        "@/*": ["src/*"],
     }
   },
   "include": ["src/**/*", "*"],
