--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "react-intl": "^6.2.8"
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.6.0",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -23,6 +22,9 @@
     "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.34.0",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "node-sass": "^8.0.0",
+    "sass": "^1.58.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
