--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "lint:fix": "eslint --fix --ext .ts,.tsx ."
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intl": "^6.2.8",
     "react-router-dom": "^6.8.2",
-    "react-select": "^5.7.0"
+    "react-select": "^5.7.0",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.0.1",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -28,9 +33,11 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "jsdom": "^21.1.0",
     "node-sass": "^8.0.0",
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vitest": "^0.29.2"
   }
 }
