--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,15 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["node"],
+    "types": [
+        "node",
+        "jest",
+        "@testing-library/jest-dom",
+        "@testing-library/user-event"
+    ],
     "baseUrl": ".",
     "paths": {
         "@/*": ["src/*"],
