--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint:fix": "eslint --fix --ext .ts,.tsx .",
+    "lint": "eslint . --ext ts --ext tsx",
     "test": "vitest"
   },
   "dependencies": {
