--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,5 +1,9 @@
 name: GitHub Actions
-on: [push]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 jobs:
   init:
     runs-on: ubuntu-latest
@@ -7,6 +11,7 @@ jobs:
       matrix:
         node-version: [ 16.x ]
     steps:
+      - uses: actions/checkout@v3
       - name: Starting Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
