--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,9 +1,11 @@
 name: GitHub Actions
+
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+
 jobs:
   init:
     runs-on: ubuntu-latest
@@ -11,16 +13,34 @@ jobs:
       matrix:
         node-version: [ 16.x ]
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Staring Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+
+        ############################
+        # Install all modules #
+        ############################
       - name: install modules
         run: yarn install
+
+        #################
+        # Build project #
+        #################
       - name: build project
         run: yarn build
-      - name: unit test
-        run: yarn test
+
+        #############
+        # Lint code #
+        #############
       - name: lint code
         run: yarn lint
+
+        #############
+        # Run tests #
+        #############
+      - name: run test
+        run: yarn test
+
